<resources>
    <string name="app_name">econdomínio</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="title_activity_home">Login</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Notificações</string>
    <string name="title_activity_visitors">Visitantes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>

    <!-- Menu -->
    <string name="menu_visitors">Visitantes</string>
    <string name="menu_delete">Deletar</string>
    <string name="menu_edit">Editar</string>

    <!-- Notification labels -->
    <string name="mail">Correspondências</string>
    <string name="events">Eventos</string>

    <!-- Parse settings -->
    <string name="parse_app_id">iOvV1YDthJGCOfiqsXHMZA9LdKiNblOGVXqPxOTT</string>
    <string name="parse_client_key">IzJG247JYrzlWByLHYMXjefv8aCojpwdTe2Yvfj2</string>
    <string name="parse_gcm_sender_id">76880617610</string>

    <!-- Generic strings -->
    <string name="empty_list">Lista vazia</string>

    <!-- Error messages -->
    <string name="error_loading">Erro ao carregar informações, tente novamente.</string>
    <string name="title_activity_new_or_edit_visitor">Cadastro de visitante</string>

    <!-- Visitor form strings -->
    <string name="visitor_form_hint_photo">Foto:</string>
    <string name="visitor_form_hint_name">Nome</string>
    <string name="visitor_form_hint_rg">RG</string>
    <string name="visitor_form_save">Salvar</string>

</resources>
