<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.econdominio.NewOrEditVisitorActivity"
    tools:showIn="@layout/activity_new_or_edit_visitor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/visitor_form_hint_photo"
                style="@style/AppTheme.NormalText"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/visitor_form_photo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_menu_camera"
                android:contentDescription="@string/visitor_form_hint_photo"
                />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/visitor_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visitor_form_hint_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/visitor_form_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visitor_form_hint_rg"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/visitor_form_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor_form_save"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            />

    </LinearLayout>

</ScrollView>
